--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(test2)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
-    main.c addition.c addition.h multiplication.c multiplication.h soustraction.c soustraction.h)
+    main.c addition.c addition.h multiplication.c multiplication.h soustraction.c soustraction.h Racine.h Racine.cpp)
 
 add_executable(test2 ${SOURCE_FILES})
