--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(test2)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
-    main.c addition.c addition.h multiplication.c multiplication.h soustraction.c soustraction.h puissance.c puissance.h Racine.h Racine.cpp)
+    main.c addition.c addition.h multiplication.c multiplication.h soustraction.c soustraction.h puissance.c puissance.h Racine.h Racine.c)
 
 
 add_executable(test2 ${SOURCE_FILES})
